manifests/seraphim/prod/mariadb/Deployment-mariadb-operator-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: mariadb-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/version: 26.3.0
    helm.sh/chart: mariadb-operator-26.3.0
  name: mariadb-operator-webhook
  namespace: mariadb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: mariadb-operator
      app.kubernetes.io/name: mariadb-operator-webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mariadb-operator
        app.kubernetes.io/name: mariadb-operator-webhook
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - webhook
            - --ca-cert-path=/tmp/k8s-webhook-server/serving-certs/ca.crt
            - --cert-dir=/tmp/k8s-webhook-server/serving-certs
            - --dns-name=mariadb-operator-webhook.mariadb.svc
            - --port=9443
            - --metrics-addr=:8080
            - --health-addr=:8081
            - --log-level=INFO
          image: docker-registry3.mariadb.com/mariadb-operator/mariadb-operator:26.3.0
          imagePullPolicy: IfNotPresent
          name: webhook
          ports:
            - containerPort: 9443
              name: https
              protocol: TCP
            - containerPort: 8080
              name: metrics
              protocol: TCP
            - containerPort: 8081
              name: health
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 5
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      hostNetwork: false
      serviceAccountName: mariadb-operator-webhook
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: mariadb-operator-webhook-cert
