manifests/seraphim/prod/mariadb/Deployment-mariadb-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: mariadb-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb-operator
    app.kubernetes.io/version: 26.3.0
    helm.sh/chart: mariadb-operator-26.3.0
  name: mariadb-operator
  namespace: mariadb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: mariadb-operator
      app.kubernetes.io/name: mariadb-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mariadb-operator
        app.kubernetes.io/name: mariadb-operator
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - --metrics-addr=:8080
            - --log-level=INFO
          image: docker-registry3.mariadb.com/mariadb-operator/mariadb-operator:26.3.0
          imagePullPolicy: IfNotPresent
          name: controller
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
      serviceAccountName: mariadb-operator
      terminationGracePeriodSeconds: 10
