manifests/seraphim/prod/mariadb/Service-mariadb-operator-webhook-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: mariadb-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/version: 26.3.0
    helm.sh/chart: mariadb-operator-26.3.0
  name: mariadb-operator-webhook-metrics
  namespace: mariadb
spec:
  ports:
    - name: metrics
      port: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/instance: mariadb-operator
    app.kubernetes.io/name: mariadb-operator-webhook
