manifests/seraphim/prod/mariadb/Service-mariadb-operator-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: mariadb-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/version: 26.3.0
    helm.sh/chart: mariadb-operator-26.3.0
  name: mariadb-operator-webhook
  namespace: mariadb
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    app.kubernetes.io/instance: mariadb-operator
    app.kubernetes.io/name: mariadb-operator-webhook
